--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 2,
   "name": "Top Shot Sniper",
-  "version": "0.0.0.3",
+  "version": "0.0.4",
   "description": "Top Shot Sniper",
   "browser_action": {
+    "default_title": "NBA Top Shot Sniper",
     "default_popup": "popup.html"
   },
   "icons": {
@@ -31,6 +32,7 @@
     "activeTab",
     "storage",
     "notifications",
+    "declarativeContent",
     "https://www.nbatopshot.com/listings/p2p/*",
     "http://www.nbatopshot.com/listings/p2p/*",
     "https://recnepsbackwards.github.io/*"
