--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
     "manifest_version": 2,
     "name": "Top Shot Helper",
-    "version": "0.0.0.4",
+    "version": "0.0.0.5",
     "description": "Top Shot Helper",
     "browser_action": {
       "default_popup": "popup.html"
     },
     "icons": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png" 
+      "16": "static/icons/icon16.png",
+      "48": "static/icons/icon48.png",
+      "128": "static/icons/icon128.png" 
     },
     "background": {
       "scripts": [
@@ -21,8 +21,7 @@
       {
         "matches": [
           "https://www.nbatopshot.com/listings/p2p/*",
-          "http://www.nbatopshot.com/listings/p2p/*",
-          "https://recnepsbackwards.github.io/*"        
+          "http://www.nbatopshot.com/listings/p2p/*"
         ],
         "js": [
           "scripts/content_script.js"
@@ -34,7 +33,6 @@
       "activeTab",
       "storage",
       "https://www.nbatopshot.com/listings/p2p/*",
-      "http://www.nbatopshot.com/listings/p2p/*",
-      "https://recnepsbackwards.github.io/*"
+      "http://www.nbatopshot.com/listings/p2p/*"
     ]
 }
